Refactor loaders