@@ -18,16 +18,16 @@ package com.apicatalog.jsonld.context;
 import java.io.IOException;
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
+import com.apicatalog.jsonld.JsonLdErrorCode;
 import com.apicatalog.jsonld.JsonLdException;
 import com.apicatalog.jsonld.JsonLdProfile;
-import com.apicatalog.jsonld.JsonLdErrorCode;
 import com.apicatalog.jsonld.JsonLdVersion;
 import com.apicatalog.jsonld.document.Document;
 import com.apicatalog.jsonld.json.JsonUtils;
@@ -35,7 +35,6 @@ import com.apicatalog.jsonld.lang.BlankNode;
 import com.apicatalog.jsonld.lang.Direction;
 import com.apicatalog.jsonld.lang.Keywords;
 import com.apicatalog.jsonld.loader.DocumentLoader;
-import com.apicatalog.jsonld.loader.LoaderOptions;
 import com.apicatalog.tree.io.NodeAdapter;
 import com.apicatalog.tree.io.PolyNode;
 import com.apicatalog.tree.io.java.NativeAdapter;
@@ -236,9 +235,10 @@ public final class ContextBuilder {
                     throw new JsonLdException(JsonLdErrorCode.LOADING_REMOTE_CONTEXT_FAILED);
                 }
 
-                final LoaderOptions loaderOptions = new LoaderOptions();
-                loaderOptions.setProfile(JsonLdProfile.CONTEXT);
-                loaderOptions.setRequestProfile(Arrays.asList(loaderOptions.getProfile()));
+                final var loaderOptions = new DocumentLoader.Options(
+                        false,
+                        JsonLdProfile.CONTEXT,
+                        List.of(JsonLdProfile.CONTEXT));
 
                 PolyNode importedContent = null;
 
@@ -564,9 +564,10 @@ public final class ContextBuilder {
 
         if (remoteDocument == null) {
 
-            LoaderOptions loaderOptions = new LoaderOptions();
-            loaderOptions.setProfile(JsonLdProfile.CONTEXT);
-            loaderOptions.setRequestProfile(Arrays.asList(loaderOptions.getProfile()));
+            final var loaderOptions = new DocumentLoader.Options(
+                    false,
+                    JsonLdProfile.CONTEXT,
+                    List.of(JsonLdProfile.CONTEXT));
 
             try {
 
